Fix deprecation in Runner